--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>liberty.maven</groupId>
-	<artifactId>sample.servlet</artifactId>
+	<artifactId>jpaApp</artifactId>
 	<version>1</version>
 	<packaging>war</packaging>
 	
@@ -32,7 +32,7 @@
 		<!-- Liberty server properties -->
 		<testServerHttpPort>9080</testServerHttpPort>
 		<testServerHttpsPort>9443</testServerHttpsPort>
-		<warContext>servlet</warContext>
+		<warContext>jpaApp</warContext>
 		<package.file>${project.build.directory}/${project.artifactId}.zip</package.file>
 		<packaging.type>usr</packaging.type>
 </properties>
@@ -79,12 +79,46 @@
 							</execution>
 						</executions>
 					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-dependency-plugin</artifactId>
+						<version>3.0.0</version>
+						<executions>
+							<execution>
+								<id>copy-derby</id>
+								<phase>package</phase>
+								<goals>
+									<goal>copy</goal>
+								</goals>
+								<configuration>
+		              		  	<artifactItems>
+                    				<artifactItem>
+    								<groupId>org.apache.derby</groupId>
+    								<artifactId>derby</artifactId>
+    								<version>10.13.1.1</version>
+                        			<outputDirectory>${project.build.directory}/liberty/wlp/usr/shared/resources</outputDirectory>                                 
+                    				</artifactItem>
+               					</artifactItems>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
 				</plugins>
 			</build>
 		</profile>
 	</profiles>
 
 	<dependencies>
+		<dependency>
+    		<groupId>javax.persistence</groupId>
+    		<artifactId>persistence-api</artifactId>
+    		<version>1.0.2</version>
+		</dependency>
+		<dependency>
+    		<groupId>javax.transaction</groupId>
+    		<artifactId>javax.transaction-api</artifactId>
+    		<version>1.2</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -114,7 +148,7 @@
 	<build>
 		<finalName>${project.artifactId}</finalName>
 		<plugins>
-			<plugin>
+			<!--<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.6</version>
@@ -122,7 +156,7 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 					<packagingExcludes>pom.xml</packagingExcludes>
 				</configuration>
-			</plugin>
+			</plugin-->
 			<!-- Plugin to run unit tests -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -166,6 +200,19 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.0.0</version>
+        <configuration>
+          <webResources>
+            <resource>
+              <!-- this is relative to the pom.xml directory -->
+              <directory>src/main/liberty/config</directory>
+            </resource>
+          </webResources>
+        </configuration>
+      </plugin>
 			<!-- Enable liberty-maven plugin -->
 			<plugin>
 				<groupId>net.wasdev.wlp.maven.plugins</groupId>
@@ -175,8 +222,8 @@
 				<configuration>
 					<assemblyArtifact>
 						<groupId>com.ibm.websphere.appserver.runtime</groupId>
-						<artifactId>wlp-webProfile7</artifactId>
-						<version>16.0.0.3</version>
+						<artifactId>wlp-kernel</artifactId>
+						<version>16.0.0.4</version>
 						<type>zip</type>
 					</assemblyArtifact>
 					<configFile>src/main/liberty/config/server.xml</configFile>
