--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	
 	<modelVersion>4.0.0</modelVersion>
+	
+	<parent>
+        <groupId>net.wasdev.wlp.maven.parent</groupId>
+        <artifactId>liberty-maven-app-parent</artifactId>
+        <version>2.0</version>
+	</parent>
 
 	<groupId>liberty.maven</groupId>
 	<artifactId>jpaApp</artifactId>
@@ -35,7 +42,7 @@
 		<warContext>jpaApp</warContext>
 		<package.file>${project.build.directory}/${project.artifactId}.zip</package.file>
 		<packaging.type>usr</packaging.type>
-</properties>
+	</properties>
 
 
 	<profiles>
@@ -45,66 +52,6 @@
 				<package.file>${project.build.directory}/${project.artifactId}.jar</package.file>
 				<packaging.type>runnable</packaging.type>
 			</properties>
-		</profile>
-		<profile>
-			<id>liberty-test</id>
-
-			<!--Do not start the server unless testing -->
-
-			<activation>
-				<property>
-					<name>!skipTests</name>
-				</property>
-			</activation>
-
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>net.wasdev.wlp.maven.plugins</groupId>
-						<artifactId>liberty-maven-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>start-server</id>
-								<phase>pre-integration-test</phase>
-								<goals>
-									<goal>start-server</goal>
-								</goals>
-							</execution>
-							<execution>
-								<id>stop-server</id>
-								<phase>post-integration-test</phase>
-								<goals>
-									<goal>stop-server</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-dependency-plugin</artifactId>
-						<version>3.0.0</version>
-						<executions>
-							<execution>
-								<id>copy-derby</id>
-								<phase>package</phase>
-								<goals>
-									<goal>copy</goal>
-								</goals>
-								<configuration>
-		              		  	<artifactItems>
-                    				<artifactItem>
-    								<groupId>org.apache.derby</groupId>
-    								<artifactId>derby</artifactId>
-    								<version>10.13.1.1</version>
-                        			<outputDirectory>${project.build.directory}/liberty/wlp/usr/shared/resources</outputDirectory>                                 
-                    				</artifactItem>
-               					</artifactItems>
-							</configuration>
-						</execution>
-					</executions>
-				</plugin>
-				</plugins>
-			</build>
 		</profile>
 	</profiles>
 
@@ -148,76 +95,35 @@
 	<build>
 		<finalName>${project.artifactId}</finalName>
 		<plugins>
-			<!--<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>2.6</version>
-				<configuration>
-					<failOnMissingWebXml>false</failOnMissingWebXml>
-					<packagingExcludes>pom.xml</packagingExcludes>
-				</configuration>
-			</plugin-->
 			<!-- Plugin to run unit tests -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18.1</version>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.0.0</version>
 				<executions>
 					<execution>
-						<phase>test</phase>
-						<id>default-test</id>
-						<configuration>
-							<excludes>
-								<exclude>**/it/**</exclude>
-							</excludes>
-							<reportsDirectory>${project.build.directory}/test-reports/unit</reportsDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.7</version>
-				<executions>
-					<execution>
-						<id>copy-app</id>
+						<id>copy-derby</id>
 						<phase>package</phase>
 						<goals>
-							<goal>copy-resources</goal>
+							<goal>copy</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${project.build.directory}/liberty/wlp/usr/servers/defaultServer/apps</outputDirectory>
-							<resources>
-								<resource>
-									<directory>${project.build.directory}</directory>
-									<includes>
-										<include>${project.artifactId}.war</include>
-									</includes>
-								</resource>
-							</resources>
+              		  	<artifactItems>
+                  				<artifactItem>
+  								<groupId>org.apache.derby</groupId>
+  								<artifactId>derby</artifactId>
+  								<version>10.13.1.1</version>
+                      			<outputDirectory>${project.build.directory}/liberty/wlp/usr/shared/resources</outputDirectory>                                 
+                  				</artifactItem>
+             					</artifactItems>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>3.0.0</version>
-        <configuration>
-          <webResources>
-            <resource>
-              <!-- this is relative to the pom.xml directory -->
-              <directory>src/main/liberty/config</directory>
-            </resource>
-          </webResources>
-        </configuration>
-      </plugin>
 			<!-- Enable liberty-maven plugin -->
 			<plugin>
 				<groupId>net.wasdev.wlp.maven.plugins</groupId>
 				<artifactId>liberty-maven-plugin</artifactId>
-				<version>1.3</version>
 				<extensions>true</extensions>
 				<configuration>
 					<assemblyArtifact>
@@ -237,27 +143,28 @@
 					</bootstrapProperties>
 				</configuration>
 				<executions>
-					<execution>
-						<id>install-liberty</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>install-server</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>package-app</id>
-						<phase>package</phase>
-						<goals>
-							<goal>package-server</goal>
-						</goals>
-					</execution>
-				</executions>
+			       <execution>
+			           <id>install-feature</id>
+			           <phase>prepare-package</phase>
+			           <goals>
+			               <goal>install-feature</goal>
+			           </goals>
+			           <configuration>
+			               <features>
+			               		<acceptLicense>true</acceptLicense>
+						    	<feature>servlet-3.1</feature>
+						        <feature>jdbc-4.1</feature>
+						        <feature>jpa-2.0</feature>
+			               </features>
+			           </configuration>
+			       </execution>
+			    </executions>
 			</plugin>
 			<!-- Plugin to run functional tests -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.18.1</version>
+				<version>2.20</version>
 				<executions>
 					<execution>
 						<phase>integration-test</phase>
@@ -266,9 +173,6 @@
 							<goal>integration-test</goal>
 						</goals>
 						<configuration>
-							<includes>
-								<include>**/it/**</include>
-							</includes>
 							<systemPropertyVariables>
 								<liberty.test.port>${testServerHttpPort}</liberty.test.port>
 								<war.context>${warContext}</war.context>
