--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	
+
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
         <groupId>net.wasdev.wlp.maven.parent</groupId>
         <artifactId>liberty-maven-app-parent</artifactId>
-        <version>2.0</version>
+        <version>2.1-SNAPSHOT</version>
 	</parent>
 
 	<groupId>liberty.maven</groupId>
 	<artifactId>jpaApp</artifactId>
 	<version>1</version>
 	<packaging>war</packaging>
-	
+
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
@@ -113,7 +113,7 @@
   								<groupId>org.apache.derby</groupId>
   								<artifactId>derby</artifactId>
   								<version>10.13.1.1</version>
-                      			<outputDirectory>${project.build.directory}/liberty/wlp/usr/shared/resources</outputDirectory>                                 
+                      			<outputDirectory>${project.build.directory}/liberty/wlp/usr/shared/resources</outputDirectory>
                   				</artifactItem>
              					</artifactItems>
 						</configuration>
@@ -129,7 +129,7 @@
 					<assemblyArtifact>
 						<groupId>com.ibm.websphere.appserver.runtime</groupId>
 						<artifactId>wlp-kernel</artifactId>
-						<version>17.0.0.1</version>
+						<version>17.0.0.2</version>
 						<type>zip</type>
 					</assemblyArtifact>
 					<configFile>src/main/liberty/config/server.xml</configFile>
