--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'liberty'
 group = 'liberty.gradle'
 version = '1'
 
-description = """"""
+description = "ava Persistence API (JPA) Sample"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -42,16 +42,16 @@ ext {
 }
 
 war {
-		archiveName = baseName + '.' + extension
+	archiveName = baseName + '.' + extension
 }
 
 liberty {
     server{
         configFile = file("src/main/liberty/config/server.xml")
-				bootstrapProperties = ['default.http.port': "${testServerHttpPort}" , 'default.https.port': "${testServerHttpsPort}", 'appContext': "${warContext}",'appLocation': "${war.archiveName}"]
+		bootstrapProperties = ['default.http.port': "${testServerHttpPort}" , 'default.https.port': "${testServerHttpsPort}", 'appContext': "${warContext}",'appLocation': "${war.archiveName}"]
         name = 'LibertyProjectServer'
         apps = [war]
-				features {
+		features {
             name = ['servlet-3.1', 'jdbc-4.1', 'jpa-2.0', 'localConnector-1.0']
             acceptLicense = true
         }
@@ -70,8 +70,8 @@ dependencies {
     testCompile group: 'org.apache.cxf', name: 'cxf-rt-rs-client', version:'3.1.1'
     testCompile group: 'org.glassfish', name: 'javax.json', version:'1.0.4'
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.1.0'
- 		derby group: 'org.apache.derby', name: 'derby', version: '10.13.1.1'
-		libertyRuntime group: 'com.ibm.websphere.appserver.runtime', name: 'wlp-kernel', version: '17.0.0.2'
+ 	derby group: 'org.apache.derby', name: 'derby', version: '10.13.1.1'
+	libertyRuntime group: 'com.ibm.websphere.appserver.runtime', name: 'wlp-kernel', version: '17.0.0.2'
 }
 
 
