--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,7 @@
 			<plugin>
 				<groupId>net.wasdev.wlp.maven.plugins</groupId>
 				<artifactId>liberty-maven-plugin</artifactId>
+                <version>2.1-SNAPSHOT</version>
 				<extensions>true</extensions>
 				<configuration>
 					<assemblyArtifact>
