--- a/pom.xml
+++ b/pom.xml
@@ -92,21 +92,6 @@
 		</dependency>
 	</dependencies>
 
-	<pluginRepositories>
-			<!-- Configure Sonatype OSS Maven snapshots repository -->
-			<pluginRepository>
-					<id>sonatype-nexus-snapshots</id>
-					<name>Sonatype Nexus Snapshots</name>
-					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-					<snapshots>
-							<enabled>true</enabled>
-					</snapshots>
-					<releases>
-							<enabled>false</enabled>
-					</releases>
-			</pluginRepository>
-	</pluginRepositories>
-
 	<build>
 		<finalName>${project.artifactId}</finalName>
 		<plugins>
@@ -139,7 +124,7 @@
 			<plugin>
 				<groupId>net.wasdev.wlp.maven.plugins</groupId>
 				<artifactId>liberty-maven-plugin</artifactId>
-                <version>2.1-SNAPSHOT</version>
+                <version>2.1</version>
 				<extensions>true</extensions>
 				<configuration>
 					<assemblyArtifact>
