--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,10 @@ tasks.withType(JavaCompile) {
 
 buildscript {
     repositories {
-        mavenLocal()
         mavenCentral()
     }
     dependencies {
-        classpath 'net.wasdev.wlp.gradle.plugins:liberty-gradle-plugin:2.0'
+        classpath 'net.wasdev.wlp.gradle.plugins:liberty-gradle-plugin:2.1'
     }
 }
 
@@ -96,7 +95,7 @@ task integrationTest(type: Test) {
     include '**/it/**'
     exclude '**/unit/**'
 
-    systemProperties = ['liberty.test.port': testServerHttpPort, 'war.name': warContext]
+    systemProperties = ['liberty.test.port': testServerHttpPort, 'war.context': warContext]
 }
 
 task printMessageAboutRunningServer {
