--- a/build.gradle
+++ b/build.gradle
@@ -59,12 +59,12 @@ configurations{
 }
 
 dependencies {
-    compile group: 'javax.persistence', name: 'persistence-api', version:'1.0.2'
-    compile group: 'javax.transaction', name: 'javax.transaction-api', version:'1.2'
+    providedCompile group: 'javax.persistence', name: 'persistence-api', version:'1.0.2'
+    providedCompile group: 'javax.transaction', name: 'javax.transaction-api', version:'1.2'
+    providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.1.0'
     testCompile group: 'junit', name: 'junit', version:'4.12'
     testCompile group: 'org.apache.cxf', name: 'cxf-rt-rs-client', version:'3.1.1'
     testCompile group: 'org.glassfish', name: 'javax.json', version:'1.0.4'
-    providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.1.0'
     derby group: 'org.apache.derby', name: 'derby', version: '10.13.1.1'
     libertyRuntime group: 'com.ibm.websphere.appserver.runtime', name: 'wlp-kernel', version: '17.0.0.2'
 }
