--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'liberty'
 group = 'liberty.gradle'
 version = '1'
 
-description = "ava Persistence API (JPA) Sample"
+description = "Java Persistence API (JPA) Sample"
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
