--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,7 @@
                                 <feature>servlet-3.1</feature>
                                 <feature>jdbc-4.1</feature>
                                 <feature>jpa-2.0</feature>
+                                <feature>localConnector-1.0</feature>
                             </features>
                         </configuration>
                     </execution>
